[tool.poetry]
name = "pgpulumi"
version = "0.1.0"
description = ""
authors = ["Gianluca Mascolo <gianluca.mascolo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = "^3.0.0"
pulumi-postgresql = "^3.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
